tests/typing/bad/testfile-shadow-1.c
#include <stdbool.h>
#include <stdlib.h>
#include <stdio.h>
int f() {}
int main() { int f; f(); }

